# pypokerstove

./: .gitignore  .gitmodules  BOARD_SIZE.patch  CMakeLists.txt  Dockerfile  README.md  __init__.py  pypokerstove.i  setup.py.in
patches/: c++11.patch
test/: test_HoldemHandEvaluator.py  test_OmahaHighHandEvaluator.py
